alvaro_martin/session-02/exercise-01/drupal-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: drupal
  namespace: "exercise-01"
  labels:
    app: drupal
    uses: mariadb
# From here it's a RS
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
# From here, it's a POD
    spec:
      containers:
      - image: bitnami/drupal:latest
        name: drupal
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: https
          containerPort: 443
          protocol: TCP
        volumeMounts:
        - name: drupal-vol
          mountPath: /bitnami/drupal
      volumes:
        - name: drupal-vol
          persistentVolumeClaim:
            claimName: drupal-pvc
