alvaro_martin/session-02/exercise-01/mariadb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: "exercise-01"
# From here it's a RS
spec:
  selector:
    matchLabels:
      app: mariadb # has to match .spec.template.metadata.labels
  serviceName: "mariadb"
  replicas: 1 # by default is 1
  template:
    metadata:
      labels:
        app: mariadb # has to match .spec.selector.matchLabels
# From here, it's a POD
    spec:
# To solve the non-root permission problem
# From: https://engineering.bitnami.com/articles/running-non-root-containers-on-openshift.html
      terminationGracePeriodSeconds: 10
      containers:
      - name: mariadb
        image: bitnami/mariadb:10.1
        ports:
          - containerPort: 3306
            name: mysql
        volumeMounts:
        - name: mariadb-vol
          mountPath: /bitnami/mariadb
      volumes:
        - name: mariadb-vol
          persistentVolumeClaim:
            claimName: mariadb-pvc
