alvaro_martin/session-02/exercise-01/wordpress-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wordpress
  namespace: "exercise-01"
  labels:
    app: wordpress
    uses: mariadb
# From here it's a RS
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
# From here, it's a POD
    spec:
      containers:
      - image: bitnami/wordpress:latest
        name: wordpress
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: https
          containerPort: 443
          protocol: TCP
        volumeMounts:
        - name: wordpress-vol
          mountPath: /bitnami/wordpress
      volumes:
        - name: wordpress-vol
          persistentVolumeClaim:
            claimName: wordpress-pvc
