alvaro_martin/session-02/exercise-01/drupal-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal
  namespace: "exercise-01"
  labels:
    app: drupal
spec:
  sessionAffinity: ClientIP
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  - name: https
    protocol: TCP
    port: 443
    targetPort: https
  selector:
    app: drupal
