alvaro_martin/session-02/exercise-01/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: "exercise-01"
  labels:
    app: mariadb
spec:
  clusterIP: None # Headless service
  ports:
  - port: 3306
    name: mysql
  selector:
    app: mariadb
