alvaro_martin/session-02/exercise-01/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: "exercise-01"
  labels:
    app: wordpress
spec:
  sessionAffinity: ClientIP
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  - name: https
    protocol: TCP
    port: 443
    targetPort: https
  selector:
    app: wordpress
