alvaro_martin/session-02/exercise-01/mariadb-networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mariadb-frontend-allow
spec:
  podSelector:
    matchLabels:
      # Destination pods
      app: mariadb
  ingress:
    - from:
      # Source pods allowed to access. Our apps are configured with 'uses' label
      - podSelector:
          matchLabels:
            uses: mariadb
      ports:
        - protocol: TCP
          port: 3306
